2016-05-11  Richard Biener  <rguenther@suse.de>

PR tree-optimization/71055
	* tree-ssa-sccvn.c (vn_reference_lookup_3): When native-interpreting
	sth with precision not equal to access size verify we don't chop
	off bits.

	* gcc.dg/torture/pr71055.c: New testcase.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@236122 138bc75d-0d04-0410-961f-82ee72b054a4